2005-06-09  Kjartan Maraas  <kmaraas@gnome.org>

	* gweather-applet.c:
	* main.c: (gweather_applet_new):
	* weather.c:
	* weather.h: Remove a lot of old unused stuff so we don't
	use gnome_config_* any more. Closes bug #172028.

2005-04-03  Ryan Lortie  <desrt@desrt.ca>

	** MERGE CHANGES FROM HEAD **

	* gweather-pref.c: Since the current_location structure is free'd
	by the row_changed callback and since we change the active row
	while populating the TreeView in the XML parser, make a copy.

	* gweather-xml.c: Replace a direct "return -1" with "goto error_out"
	to ensure that things get free'd up in the error case.

	Both of the above are fixes to problems spotted by Kjartan.

2005-04-01  Ryan Lortie  <desrt@desrt.ca>

	* gweather-pref.c: Remove _() around a message introduced in the last
	commit.  This message will never be seen by an end user (except in
	the event of developer error) and was causing problems with the
	i18n project translated message counts on the stable branch.

2005-03-30  Ryan Lortie  <desrt@desrt.ca>

	** MERGE CHANGES FROM HEAD **

	* gweather-dialog.c: Remove some debugging output (bug #171924)

	* gweather-xml.h: Change the prototype from void -> int to allow
	an indication of success/failure to parse the XML.

	* gweather-pref.c: Add an error dialog asking the user to file a
	bug in the case of an Locations.xml parse error.

	* weather.h: Removed trans/untrans_name for favour of a single
	'name' field in the WeatherLocation structure.  Change prototype
	of weather_location_new to take the single name.  (bug #171855)

	* weather.c: Lots of changes to deal with the removal of
	trans/untrans_name.

	* weather-iwin.c: Small change to deal with the removal of the
	translated/untranslated name crud.

	* gweather-xml.c: Massive (pretty much total) rewrite.  Better
	error reporting, fewer memory leaks.  Less code duplication.
	Changed to deal with a single name (no trans/untrans stuff).

	* gweather-about.c: Added myself to the author credits.
