@@ -29219,22 +29219,25 @@
       <location>
        <_name>Cardiff</_name>
        <code>EGFF</code>
-       <zone>:RGPMS</zone>
+       <zone>:wales</zone>
        <coordinates>51-24N 003-21W</coordinates>
       </location>
       <location>
        <_name>Pembrey</_name>
        <code>EGOP</code>
+       <zone>:wales</zone>
        <coordinates>51-43N 004-22W</coordinates>
       </location>
       <location>
        <_name>St Athan</_name>
        <code>EGDX</code>
+       <zone>:wales</zone>
        <coordinates>51-24N 003-26W</coordinates>
       </location>
       <location>
        <_name>Valley</_name>
        <code>EGOV</code>
+       <zone>:wales</zone>
        <coordinates>53-15N 004-32W</coordinates>
       </location>
     </state>
@@ -29248,22 +29251,25 @@
    <location>
     <_name>Benson</_name>
     <code>EGUB</code>
+    <zone>:southeast</zone>
     <coordinates>51-37N 001-05W</coordinates>
    </location>
    <location>
     <_name>Biggin Hill</_name>
     <code>EGKB</code>
-    <zone>:RBPMS</zone>
+    <zone>:southeast</zone>
     <coordinates>51-19N 000-02E</coordinates>
    </location>
    <location>
     <_name>Brize Norton</_name>
     <code>EGVN</code>
+    <zone>:southeast</zone>
+    <coordinates>51-08N 001-06W</coordinates>
    </location>
    <location>
     <_name>Cambridge</_name>
     <code>EGSC</code>
-    <zone>:RNPMS-</zone>
+    <zone>:eastern</zone>
     <coordinates>52-12N 000-11E</coordinates>
    </location>
    <location>
@@ -29274,7 +29280,7 @@
    <location>
     <_name>Cranfield</_name>
     <code>EGTC</code>
-    <zone>:RIPMS</zone>
+    <zone>:eastern</zone>
     <coordinates>52-04N 000-37W</coordinates>
    </location>
    <location>
@@ -29289,7 +29295,7 @@
    </location>
    <city>
      <_name>London</_name>
-     <zone>:RBPMS</zone>
+     <zone>:southeast</zone>
      <location>
        <_name>City Airport</_name>
        <code>EGLC</code>
@@ -29314,7 +29320,7 @@
    <location>
      <_name>Luton</_name>
      <code>EGGW</code>
-     <zone>:RBPMS</zone>
+     <zone>:southeast</zone>
      <coordinates>51-52N 000-22W</coordinates>
    </location>
    <location>
@@ -29340,7 +29346,7 @@
    <location>
     <_name>Norwich</_name>
     <code>EGSH</code>
-    <zone>:RNPMS</zone>
+    <zone>:eastern</zone>
     <coordinates>52-38N 001-18E</coordinates>
    </location>
    <location>
@@ -29351,18 +29357,19 @@
    <location>
     <_name>Shoreham</_name>
     <code>EGKA</code>
-    <zone>:RBPMS</zone>
+    <zone>:southeast</zone>
     <coordinates>50-50N 000-17W</coordinates>
    </location>
    <location>
     <_name>Southend</_name>
     <code>EGMC</code>
-    <zone>:RBPMS</zone>
+    <zone>:southeast</zone>
     <coordinates>51-34N 000-42E</coordinates>
    </location>
    <location>
     <_name>Wattisham</_name>
     <code>EGUW</code>
+    <zone>:eastern</zone>
     <coordinates>52-07N 000-58E</coordinates>
    </location>
    <location>
@@ -29381,7 +29388,7 @@
    <location>
     <_name>Birmingham</_name>
     <code>EGBB</code>
-    <zone>:BBPMS</zone>
+    <zone>:midlands</zone>
    </location>
    <location>
     <_name>Cosford</_name>
@@ -29398,19 +29405,19 @@
     attracting American tourists -->
     <_name>Nottingham East Midlands</_name>
     <code>EGNX</code>
-    <zone>:BBPMS</zone>
+    <zone>:midlands</zone>
     <coordinates>52-50N 001-20W</coordinates>
    </location>
    <location>
     <_name>Gloucestershire</_name>
     <code>EGBJ</code>
-    <zone>:RDPMS</zone>
+    <zone>:westcountry</zone>
     <coordinates>51-54N 002-10W</coordinates>
    </location>
    <location>
     <_name>Shawbury</_name>
     <code>EGOS</code>
-    <zone>:BBPMS</zone>
+    <zone>:midlands</zone>
     <coordinates>52-48N 002-40W</coordinates>
    </location>
   </state>
@@ -29434,7 +29441,7 @@
    <location>
     <_name>Humberside</_name>
     <code>EGNJ</code>
-    <zone>:RTPMS</zone>
+    <zone>:northern</zone>
     <coordinates>53-35N 000-21W</coordinates>
    </location>
    <location>
@@ -29450,7 +29457,7 @@
    <location>
     <_name>Newcastle</_name>
     <code>EGNT</code>
-    <zone>:RTPMS</zone>
+    <zone>:northern</zone>
     <coordinates>55-02N 001-42W</coordinates>
    </location>
    <location>
@@ -29461,7 +29468,7 @@
    <location>
     <_name>Teesside</_name>
     <code>EGNV</code>
-    <zone>:RTPMS</zone>
+    <zone>:northern</zone>
     <coordinates>54-31N 001-25W</coordinates>
    </location>
    <location>
@@ -29480,17 +29487,17 @@
    <location>
     <_name>Blackpool</_name>
     <code>EGNH</code>
-    <zone>:RCPMS</zone>
+    <zone>:northwest</zone>
    </location>
    <location>
     <_name>Boulmer</_name>
     <code>EGQM</code>
-    <zone>:RTPMS</zone>
+    <zone>:northern</zone>
    </location>
    <location>
     <_name>Carlisle</_name>
     <code>EGNC</code>
-    <zone>:RCPMS</zone>
+    <zone>:northwest</zone>
     <coordinates>54-56N 002-57W</coordinates>
    </location>
    <location>
@@ -29501,7 +29508,7 @@
    <location>
     <_name>Isle of Man</_name>
     <code>EGNS</code>
-    <zone>:RCPMS</zone>
+    <zone>:northwest</zone>
     <coordinates>54-05N 004-38W</coordinates>
    </location>
    <location>
@@ -29513,13 +29520,13 @@
    <location>
     <_name>Liverpool</_name>
     <code>EGGP</code>
-    <zone>:RCPMS</zone>
+    <zone>:northwest</zone>
     <coordinates>53-20N 002-51W</coordinates>
    </location>
    <location>
     <_name>Manchester</_name>
     <code>EGCC</code>
-    <zone>:RCPMS</zone>
+    <zone>:northwest</zone>
     <coordinates>53-21N 002-17W</coordinates>
    </location>
   </state>
@@ -29533,6 +29540,7 @@
    <location>
     <_name>Boscombe Down</_name>
     <code>EGDM</code>
+    <zone>:westcountry</zone>
    </location>
    <location>
     <_name>Bournemouth</_name>
@@ -29542,7 +29550,7 @@
    <location>
     <_name>Bristol</_name>
     <code>EGGD</code>
-    <zone>:RDPMS</zone>
+    <zone>:westcountry</zone>
    </location>
    <location>
     <_name>Bristol Filton</_name>
@@ -29552,29 +29560,31 @@
    <location>
     <_name>Culdrose</_name>
     <code>EGDR</code>
-    <zone>:RD2PMS</zone>
+    <zone>:devoncornwall</zone>
     <coordinates>50-05N 005-15W</coordinates>
    </location>
    <location>
     <_name>Exeter</_name>
     <code>EGTE</code>
-    <zone>:RD2PMS</zone>
+    <zone>:devoncornwall</zone>
     <coordinates>50-44N 003-25W</coordinates>
    </location>
    <location>
     <_name>Guernsey</_name>
     <code>EGJB</code>
+    <zone>:centralsouthern</zone>
     <coordinates>49-26N 002-36W</coordinates>
    </location>
    <location>
     <_name>Jersey</_name>
     <code>EGJJ</code>
+    <zone>:centralsouthern</zone>
     <coordinates>49-13N 002-12W</coordinates>
    </location>
    <location>
     <_name>Lyneham</_name>
     <code>EGDL</code>
-    <zone>:BBPMS</zone>
+    <zone>:midlands</zone>
     <coordinates>51-30N 001-59W</coordinates>
    </location>
    <location>
@@ -29585,37 +29595,37 @@
    <location>
     <_name>Plymouth</_name>
     <code>EGHD</code>
-    <zone>:RD2PMS</zone>
+    <zone>:devoncornwall</zone>
     <coordinates>50-25N 004-07W</coordinates>
    </location>
    <location>
     <_name>Portland</_name>
     <code>EGDP</code>
-    <zone>:RIPMS</zone>
+    <zone>:centralsouthern</zone>
     <coordinates>50-34N 002-27W</coordinates>
    </location>
    <location>
     <_name>Scilly St Mary's</_name>
     <code>EGHE</code>
-    <zone>:RD2PMS</zone>
+    <zone>:devoncornwall</zone>
     <coordinates>49-55N 006-18W</coordinates>
    </location>
    <location>
     <_name>Southampton</_name>
     <code>EGHI</code>
-    <zone>:RIPMS</zone>
+    <zone>:centralsouthern</zone>
     <coordinates>50-54N 001-24W</coordinates>
    </location>
    <location>
     <_name>St Mawgan</_name>
     <code>EGDG</code>
-    <zone>:RD2PMS</zone>
+    <zone>:devoncornwall</zone>
     <coordinates>50-26N 005-00W</coordinates>
    </location>
    <location>
     <_name>Yeovilton</_name>
     <code>EGDY</code>
-    <zone>:RDPMS</zone>
+    <zone>:westcountry</zone>
     <coordinates>51-00N 002-38W</coordinates>
    </location>
   </state>
@@ -29624,19 +29634,19 @@
    <location>
     <_name>Belfast/Aldergrove</_name>
     <code>EGAA</code>
-    <zone>:AAPMS</zone>
+    <zone>:nireland</zone>
     <coordinates>54-39N 006-13W</coordinates>
    </location>
    <location>
     <_name>Belfast/City</_name>
     <code>EGAC</code>
-    <zone>:AAPMS</zone>
+    <zone>:nireland</zone>
     <coordinates>54-36N 005-53W</coordinates>
    </location>
    <location>
     <_name>Londonderry</_name>
     <code>EGAE</code>
-    <zone>:AAPMS</zone>
+    <zone>:nireland</zone>
     <coordinates>55-03N 007-09W</coordinates>
    </location>
   </state>
@@ -29645,37 +29655,37 @@
    <location>
     <_name>Aberdeen</_name>
     <code>EGPD</code>
-    <zone>:RQPMS</zone>
+    <zone>:nescotland</zone>
     <coordinates>57-12N 002-13W</coordinates>
    </location>
    <location>
     <_name>Benbecula</_name>
     <code>EGPL</code>
-    <zone>:RAPMS</zone>
+    <zone>:sescotland</zone>
     <coordinates>57-28N 007-22W</coordinates>
    </location>
    <location>
     <_name>Dundee</_name>
     <code>EGPN</code>
-    <zone>:RAPMS</zone>
+    <zone>:sescotland</zone>
     <coordinates>56-27N 003-01W</coordinates>
    </location>
    <location>
     <_name>Edinburgh</_name>
     <code>EGPH</code>
-    <zone>:RAPMS</zone>
+    <zone>:sescotland</zone>
     <coordinates>55-57N 003-21W</coordinates>
    </location>
    <location>
     <_name>Glasgow</_name>
     <code>EGPF</code>
-    <zone>:RAPMS</zone>
+    <zone>:swscotland</zone>
     <coordinates>55-52N 004-26W</coordinates>
    </location>
    <location>
     <_name>Inverness</_name>
     <code>EGPE</code>
-    <zone>:RQPMS</zone>
+    <zone>:nescotland</zone>
     <coordinates>57-32N 004-03W</coordinates>
    </location>
    <location>
@@ -29686,12 +29696,13 @@
    <location>
     <_name>Kinloss</_name>
     <code>EGQK</code>
-    <zone>:RQPMS</zone>
+    <zone>:nescotland</zone>
     <coordinates>57-39N 003-34W</coordinates>
    </location>
    <location>
     <_name>Kirkwall</_name>
     <code>EGPA</code>
+    <zone>:nwscotland</zone>
     <coordinates>58-57N 002-54W</coordinates>
    </location>
    <location>
@@ -29709,7 +29720,7 @@
    <location>
     <_name>Prestwick</_name>
     <code>EGPK</code>
-    <zone>:RAPMS</zone>
+    <zone>:sescotland</zone>
     <coordinates>55-30N 004-35W</coordinates>
    </location>
    <location>
@@ -29721,7 +29732,7 @@
    <location>
     <_name>Stornoway</_name>
     <code>EGPO</code>
-    <zone>:RQPMS</zone>
+    <zone>:nwscotland</zone>
     <coordinates>58-13N 006-19W</coordinates>
    </location>
    <location>
@@ -29738,7 +29749,7 @@
    <location>
     <_name>Tiree</_name>
     <code>EGPU</code>
-    <zone>:RQPMS</zone>
+    <zone>:nwscotland</zone>
     <coordinates>56-30N 006-53W</coordinates>
    </location>
    <location>
