@@ -1,3 +1,8 @@
+2005-06-26  Máirín Duffy  <duffy@redhat.com>
+
+	* Locations.xml.in: Restore unintentionally reverted UK 
+	zone changes. Add additional UK zones (#309032).
+
 2005-06-09  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gweather-applet.c:
